# patternia

./: .buildinfo  .clang-format  .gitignore  404.html  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  genindex.html  index.html  introduction.html  mkdocs.yml  objects.inv  patternia_architecture_analysis.md  search.html  searchindex.js  sitemap.xml  styles.css  usage.html
.doctrees/: environment.pickle  index.doctree  introduction.doctree  usage.doctree
.doctrees/api/: core_dsl.doctree  index.doctree  patternia.doctree
.doctrees/dev/: changelog.doctree  contributing.doctree
.doctrees/guide/: quickstart.doctree
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: bench-compare.yml  ci-full.yml  ci-pr.yml  ci.yml  clang-format-auto.yml  docs.yml
_sources/: index.md.txt  introduction.rst.txt
_sources/api/: core_dsl.rst.txt  index.md.txt  index.rst.txt
api/: core_dsl.html  index.html  patternia.html
api/api/: index.html
api/match/: index.html
assets/bench/latest/: index.html
bench/: CMakeLists.txt  bench_match_variant.cpp  bench_pipe_vs_chain.cpp  bench_pipe_vs_std.cpp  bench_ptn_lit.cpp  bench_suite.cpp  bench_variant.cpp
benchmarks/: bench_patternia.cpp  bench_patternia_complex.cpp
changelog/releases/: index.html
changelog/v0.5.2/: index.html
changelog/v0.5.3/: index.html
changelog/v0.6.0/: index.html
changelog/v0.6.1/: index.html
changelog/v0.6.2/: index.html
changelog/v0.6.3/: index.html
changelog/v0.7.0/: index.html
changelog/v0.7.1/: index.html
changelog/v0.7.2/: index.html
changelog/v0.7.3/: index.html
changelog/v0.7.4/: index.html
changelog/v0.7.5/: index.html
changelog/v0.7.6/: index.html
changelog/v0.8.0/: index.html
changelog/v0.8.1-beta.1/: index.html
changelog/v0.8.2/: index.html
changelog/v0.8.3/: index.html
changelog/v0.8.5/: index.html
changelog/v0.9.0/: index.html
changelog/v0.9.1/: index.html
changelog/v0.9.2/: index.html
cmake/: CheckCompilerVersion.cmake  Config.cmake.in
design-overview/: index.html
design/roadmap/: index.html
dev/: changelog.html  contributing.html
docs/: Doxyfile  api.md  conf.py  design-overview.md  index.md  index.rst  patternia_architecture_en.md  patternia_architecture_zh.md  roadmap.md
docs/api/: api.md  match.md
docs/assets/bench/: latest.csv  latest.md
docs/changelog/: releases.md  v0.5.2.md  v0.5.3.md  v0.6.0.md  v0.6.1.md  v0.6.2.md  v0.6.3.md  v0.7.0.md  v0.7.1.md  v0.7.2.md  v0.7.3.md  v0.7.4.md  v0.7.5.md  v0.7.6.md  v0.8.0.md  v0.8.2.md  v0.8.3.md  v0.8.5.md  v0.9.0.md  v0.9.1.md  v0.9.2.md
docs/guide/: getting-started.md  installation.md
docs/overrides/: styles.css
docs/patterns/: foreword.md  type.md  value.md
docs/performance/: index.md  v0.8.0.md  v0.8.2.md
docs/source/: conf.py  index.md  index.rst  usage.rst
docs/source/_static/: custom.css
docs/source/api/: index.md  patternia.rst
docs/tutorials/: from-control-flow.md  other-languages.md  policy-constraint.md  predicate-guards.md  sphere-constraint.md
examples/: test.cpp
experiment/: 404.html  CNAME  index.html  sitemap.xml
experiment/changelog/releases/: index.html
experiment/changelog/v0.5.2/: index.html
experiment/changelog/v0.5.3/: index.html
experiment/changelog/v0.6.0/: index.html
experiment/changelog/v0.6.1/: index.html
experiment/changelog/v0.6.2/: index.html
experiment/changelog/v0.6.3/: index.html
experiment/changelog/v0.7.0/: index.html
experiment/experiment/: index.html
experiment/guide/getting-started/: index.html
experiment/guide/installation/: index.html
experiment/search/: search_index.json
experiment/tutorials/predicate-guards/: index.html
experiment/tutorials/sphere-constraint/: index.html
guide/: quickstart.html
guide/getting-started/: index.html
guide/installation/: index.html
include/: patternia.hpp
include/ptn/: config.hpp  patternia.hpp
include/ptn/core/: fwd.h  match_builder.hpp
include/ptn/detail/: pattern_tag.hpp
include/ptn/dispatch/: traits.hpp
include/ptn/meta/: algorithms.hpp  (+5 more)
packaging/vcpkg/: portfile.cmake
patternia_architecture_en/: index.html
patternia_architecture_zh/: index.html
patterns/foreword/: index.html
patterns/type/: index.html
patterns/value/: index.html
performance/: index.html
performance/v0.8.0/: index.html
performance/v0.8.2/: index.html
roadmap/: index.html
samples/: fibo.cpp  handle_packet.cpp  test.cpp  variant_type_is.cpp
samples/json_dispatch/: main.cpp  parse_json.cpp  parse_json_handler.hpp  parse_json_pred.hpp  repo.json
scripts/: README.md  bench_compare.py  bench_single_report.py  bench_stage_results.py  setup-git-hooks.ps1  setup-git-hooks.sh
search/: search_index.json
tests/: CMakeLists.txt  test.cpp  tests_combinator.cpp  tests_destructure.cpp  tests_guard.cpp  tests_literal_pattern.cpp  tests_match_flow.cpp  tests_pipeline_match.cpp  tests_pred_pattern.cpp  tests_predicate_pattern.cpp  tests_ptn.cpp  tests_public_api.cpp  tests_relational_pattern.cpp  tests_terminal_semantics.cpp  tests_type_pattern.cpp  tests_unified_match.cpp  tests_value_pattern.cpp
tests/compile_fail/: all_requires_pattern_args.cpp  all_requires_subpattern.cpp  any_requires_pattern_args.cpp  any_requires_subpattern.cpp  bind_function_removed.cpp  case_after_wildcard.cpp  cases_factory_removed.cpp  cases_with_binding.cpp  cases_with_guard.cpp  chained_end_removed.cpp  chained_otherwise_removed.cpp  chained_when_removed.cpp  direct_match_removed.cpp  end_without_wildcard.cpp  guard_placeholder_alias_removed.cpp  has_factory_removed.cpp  lit_factory_removed.cpp  lit_v_factory_removed.cpp  match_with_cases_removed.cpp  on_pipeline_mixed_with_when.cpp  on_pipeline_without_wildcard.cpp  otherwise_with_wildcard.cpp  run_compile_fail.cmake  static_on_with_capture.cpp  val_float_requires_cpp20.cpp
tutorials/from-control-flow/: index.html
tutorials/other-languages/: index.html
tutorials/policy-constraint/: index.html
tutorials/predicate-guards/: index.html
tutorials/sphere-constraint/: index.html
(+60 files in other folders)
